--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: true
+          ref: ${{ github.ref_name == 'v*.*-tt' && 'testing' || 'main' }}
 
       - name: Get Tag Name
         run: echo "tag=$(echo ${{ github.ref }} | sed 's/refs\/tags\/v//')" >> $GITHUB_ENV
+
+      - name: Determine Publish Type
+        id: publish_type
+        run: |
+          if [[ "${{ env.tag }}" == *-t ]]; then
+            echo "type=testing" >> $GITHUB_OUTPUT
+          else
+            echo "type=latest" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
@@ -35,13 +45,17 @@ jobs:
       - name: Extract Latest Track Name
         id: latest_track
         run: |
-          latest_entry=$(yq eval '.tracks | to_entries | sort_by(.value.applicableGameVersion, .key | match("release.*") | . == "" | not) | .[-1]' config.yaml)
+          latest_entry=$(yq eval '.tracks | to_entries | sort_by(.value.applicableGameVersion, (.key == "release")) | .[-1]' config.yaml)
           track_name=$(echo "$latest_entry" | yq eval '.key' -)
           echo "result=$track_name" >> $GITHUB_OUTPUT
 
       - name: Download Dalamud Latest
         run: |
-          wget https://goatcorp.github.io/dalamud-distrib/${{ steps.latest_track.outputs.result }}/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
+          if [ "${{ steps.latest_track.outputs.result }}" == "release" ]; then
+              wget https://goatcorp.github.io/dalamud-distrib/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
+          else
+              wget https://goatcorp.github.io/dalamud-distrib/${{ steps.latest_track.outputs.result }}/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
+          fi
           unzip ${{ env.DALAMUD_HOME }}.zip -d ${{ env.DALAMUD_HOME }}
 
       - name: Restore Project
@@ -58,7 +72,7 @@ jobs:
           internal_name: 'SomethingNeedDoing'
           version_number: ${{ env.tag }}
           path: 'SomethingNeedDoing/bin/Release/SomethingNeedDoing/latest.zip'
-          type: 'latest'
+          type: ${{ steps.publish_type.outputs.type }}
           dalamud_version: '12'
         env:
           PUBLISHER_KEY: ${{ secrets.PUBLISHER_KEY }}
