--- a/SomethingNeedDoing/SomethingNeedDoing.csproj
+++ b/SomethingNeedDoing/SomethingNeedDoing.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Laylua" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
 		<PackageReference Include="NLua" Version="1.7.5" />
+		<PackageReference Include="Scrutor" Version="6.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
